--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,10 @@
   font-family:"Alexana";
   src: url("./fonts/alexana/Alexana.ttf") format("truetype");
 }
+@font-face {
+  font-family:"Gerimist";
+  src: url("./fonts/Gerimist/Gerimist.ttf") format("truetype");
+}
 
 *{
   padding: 0;
@@ -12,5 +16,72 @@
 .wrapper {
   width: 100%;
   height: 100vh;
-  background-color: aquamarine;
+  background-color: #FFFAFA;
+  position: relative;
+}
+.reset-btn {
+
+}
+.city-search-form{
+  width: 60%;
+  margin: 0 auto;
+  padding: 5rem;
+  text-align: center;
+}
+.city-search-form-label{
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  display: block;
+  font-family: "Gerimist";
+  font-size: 5rem;
+  font-weight: 500;
+}
+.city-search-form-input{
+  position: absolute;
+  left: 50%;
+  top: 45%;
+  transform: translate(-50%, -50%);
+  width: 60%;
+  height: 3rem;
+  font-size: 3rem;
+  background-color: rgba(0,0,0,0);
+  border: none;
+  border-bottom: 2px solid black;
+}
+.city-search-form-btn{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-family: "Gerimist";
+  padding: 10px;
+  line-height: 2rem;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+.data-wrapper{
+
+}
+.data-city{
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  display: block;
+  font-family: "Gerimist";
+  font-size: 5rem;
+  font-weight: 500;
+}
+.data-temp{
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  display: block;
+  font-family: "Alexana";
+  font-size: 12rem;
+  font-weight: 500;
 }
