--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,6 +31,7 @@
   border: 1px solid rgba(0,0,0,0);
   transition: border 1s;
   border-radius: 50%;
+  z-index: 999;
 }
 .reset-btn:hover {
   border: 1px solid aquamarine;
@@ -91,6 +92,8 @@
   display: block;
   font-family: "Gerimist";
   font-size: 5rem;
+  width: 100%;
+  text-align: center;
   font-weight: 500;
   z-index: 999;
 }
@@ -104,7 +107,7 @@
   left: 50%;
   transform: translate(-50%,-50%);
   width: 100%;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
 }
 .data-temp{
@@ -121,4 +124,14 @@
   width: 100%;
   line-height: 100vh;
   text-align: center;
+}
+@media only screen and (max-width: 700px) {
+  .data-temp {
+    font-size: 6rem;
+  }
+}
+@media only screen and (max-width: 350px) {
+  .data-temp {
+    font-size: 4rem;
+  }
 }
